external/esprima/test_fixtures/es2017/async/invalid-await/invalid-await-parameter3.js
class X { async f(await) {} }
